Fixed overflow issue

--- a/ember/app/styles/components/sidebar-navigation.scss
+++ b/ember/app/styles/components/sidebar-navigation.scss
@@ -1,5 +1,5 @@
 .app-container .mdl-layout__drawer {
-  overflow: hidden;
+  overflow-x: hidden;
   &.right {
     left: initial;
     right: 0;
